--- a/webapp/home/templates/home/about.html
+++ b/webapp/home/templates/home/about.html
@@ -34,7 +34,7 @@
       <p class="lead">On this page</p>
       <ol>
         <li>
-          <a href="#about">Citing Galaxy Australia</a>
+          <a href="#about">Acknowledging and citing Galaxy Australia</a>
         </li>
         <li>
           <a href="#operational-partners">Our funding and partners</a>
@@ -46,13 +46,13 @@
           <a href="#terms-of-service">Terms of service</a>
         </li>
         <li>
-          <a href="#data-privacy">Data privacy</a>
+          <a href="#data-privacy">Privacy policy and data collection statement</a>
         </li>
         <li>
-          <a href="#acceptable-use">Acceptable use</a>
+          <a href="#acceptable-use">Acceptable use policy</a>
         </li>
         <li>
-          <a href="#service-levels">Service levels</a>
+          <a href="#service-levels">Service commitments</a>
         </li>
       </ol>
     </div>
