FGENESH matrix tree recursive expand on only child

--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -6,7 +6,7 @@
 {% block head %}
 <link rel="stylesheet" href="{% static 'home/css/requests.css' %}">
 <link rel="stylesheet" href="{% static 'home/css/request-form.css' %}">
-<link rel="stylesheet" href="{% static 'home/css/tree-list.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/fgenesh-matrix-tree.css' %}">
 {% endblock %}
 
 
@@ -193,7 +193,7 @@
 
 
 {% block script %}
-<script src="{% static 'home/js/tree-list.js' %}"></script>
+<script src="{% static 'home/js/fgenesh-matrix-tree.js' %}"></script>
 <script src="{% static 'home/js/forms.js' %}"></script>
 {% endblock %}
 
