--- a/webapp/home/templates/home/pages/faqs.html
+++ b/webapp/home/templates/home/pages/faqs.html
@@ -19,6 +19,8 @@ This FAQs page is built based on the 2024 edition of Top Tips from Galaxy Austra
 Click on an FAQ to watch a YouTube video where one of the Galaxy Australia team answer your question.
     </p>
 
+   <br>
+
 <!-- Section one uploading data -->
 
  <h3>Uploading data</h3>
@@ -66,12 +68,12 @@ Click on an FAQ to watch a YouTube video where one of the Galaxy Australia team 
   <li><a href="https://www.youtube.com/watch?v=l6VGX-jKDtE&t=1329s">How do I request more storage?</a></li>
   <li><a href="https://www.youtube.com/watch?v=l6VGX-jKDtE&t=1368s">Can I set up my history tags before I upload data or run jobs?</a></li>
   <li><a href="https://www.youtube.com/watch?v=l6VGX-jKDtE&t=1425s">Can I reuse a result from other histories instead of running the tool again?</a></li>
-<ul>
+</ul>
 
 <!-- Section four what to do when things go wrong -->
 
- <h3>What to do when things go wrong</h3>
-<ul>
+  <h3>What to do when things go wrong</h3>
+ <ul>
   <li><a href="https://www.youtube.com/watch?v=3_Feg1fIp7k&t=53s">My jobs keep failing am I doing the wrong thing?</a></li>
   <li><a href="https://www.youtube.com/watch?v=3_Feg1fIp7k&t=120s">My job failed! What do I do now?</a></li>
   <li><a href="https://www.youtube.com/watch?v=3_Feg1fIp7k&t=210s">How do I submit a bug report? </a></li>
@@ -123,6 +125,17 @@ Click on an FAQ to watch a YouTube video where one of the Galaxy Australia team 
   <li><a href="https://www.youtube.com/watch?v=-7e9HT-Mw6c&t=603s">How do I download my data?</a></li>
 </ul>
 
+<br>
+<p class="lead"> Got a question about something else? </p>
+
+<p>
+There's plenty more ways to get help with Galaxy! You can:
+ <ul>
+  <li>Check the <a href="https://help.galaxyproject.org/">Galaxy Community Help Forum</a> to see if someone has had a similar issue, or post your issue there</li>
+  <li>Visit the <a href="https://training.galaxyproject.org/">Galaxy Training Network</a>for topic-based, self-directed training</li>
+  <li><a href="https://site.usegalaxy.org.au/request/support">Submit a ticket</a> to the Galaxy Australia support team</li>
+ </ul>
+</p>
   </div>
 </main>
 
