--- a/webapp/home/templates/home/pages/faqs.html
+++ b/webapp/home/templates/home/pages/faqs.html
@@ -132,8 +132,8 @@ Click on an FAQ to watch a YouTube video where one of the Galaxy Australia team 
 There's plenty more ways to get help with Galaxy! You can:
  <ul>
   <li>Check the <a href="https://help.galaxyproject.org/">Galaxy Community Help Forum</a> to see if someone has had a similar issue, or post your issue there</li>
-  <li>Visit the <a href="https://training.galaxyproject.org/">Galaxy Training Network</a>for topic-based, self-directed training</li>
-  <li><a href="https://site.usegalaxy.org.au/request/support">Submit a ticket</a> to the Galaxy Australia support team</li>
+  <li>Visit the <a href="https://training.galaxyproject.org/">Galaxy Training Network</a> for topic-based, self-directed training</li>
+  <li><a href="https://site.usegalaxy.org.au/request/support">Submit a ticket</a> to the Galaxy Australia support team.</li>
  </ul>
 </p>
   </div>
