Fix broken links

--- a/webapp/home/templates/home/pages/owncloud.html
+++ b/webapp/home/templates/home/pages/owncloud.html
@@ -45,7 +45,7 @@
 
     <p>
       If your institution isn't listed and you'd like it to be, please consider making a
-      <a href="/request/support/">support request</a>.
+      <a href="/request/support">support request</a>.
     </p>
 
     <p>
@@ -94,8 +94,7 @@
         <br><br>
 
         You may see further examples of this process in the
-        <a href="https://doc.owncloud.com/webui/next/classic_ui/session_management.html#app-passwords">OwnCloud</a>,
-        <a href="https://support.aarnet.edu.au/hc/en-us/articles/236034707-Set-or-change-your-password">AARNet</a>,
+        <a href="https://doc.owncloud.com/webui/next/classic_ui/session_management.html#app-passwords">OwnCloud</a>
         and
         <a href="https://www.griffith.edu.au/digital-solutions/research-storage/research-space-user-manual">Griffith university</a>
         documentation.
