--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -19,7 +19,7 @@
   <p>
     <small>
       The Galaxy Community, The Galaxy platform for accessible, reproducible, and collaborative data analyses: 2024 update, <i>Nucleic Acids Research</i>, Volume 52, Issue W1, 5 July 2024, Pages W83-W94,
-      <a href="https://doi.org/10.1093/nar/gkae410/" target="_blank">https://doi.org/10.1093/nar/gkae410/</a>
+      <a href="https://doi.org/10.1093/nar/gkae410" target="_blank">https://doi.org/10.1093/nar/gkae410</a>
     </small>
   </p>
 </div>
