--- a/webapp/home/templates/home/pages/docs.html
+++ b/webapp/home/templates/home/pages/docs.html
@@ -11,8 +11,7 @@
   <p class="lead">
     This page contains a list of guides specific to features on Galaxy Australia.
     <br>
-    General Galaxy training material can be found
-    <a href="https://training.galaxyproject.org/training-material/">here</a>.
+    Check <a href="/faqs">our FAQs page</a> for help using Galaxy Australia, or head to the <a href="https://training.galaxyproject.org/training-material/">Galaxy Training Network</a> for training materials.
   </p>
 
   <br>
