--- a/webapp/home/templates/home/requests/menu.html
+++ b/webapp/home/templates/home/requests/menu.html
@@ -19,7 +19,7 @@
         <h1 class="ga-blue"><span class="material-icons">help</span></h1>
         <div class="card-body">
           <p>
-            Checked <a href="/docs/faqs">our FAQs</a> and still need some assistance?
+            Checked <a href="/faqs.html">our FAQs</a> and still need some assistance?
             <br>
             The Galaxy Australia team are here to help.
           </p>
