Add QLD gov logo to footer

--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -29,6 +29,12 @@
           alt="Australian Biocommons logo"
         />
       </a>
+      <a href="https://qld.gov.au" target="_blank">
+        <img
+          src="{% static 'logos/footer/qld-gov.png' %}"
+          alt="Queensland government logo"
+        />
+      </a>
     </div>
   </div>
 
