Add QLD gov to funding acknowledgement on About page

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -110,7 +110,10 @@
 
   <p>
   Galaxy Australia is supported by funding from
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>
+    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
+    the <a href="https://science.desi.qld.gov.au/industry/funding/ricf" target="_blank">
+      Queensland Government
+    </a>,
     and
     <a href="https://bioplatforms.com/" target="_blank">Bioplatforms Australia</a>.
     Bioplatforms are enabled by
@@ -121,6 +124,9 @@
    <div class="text-center">
      <a href="https://www.unimelb.edu.au" target="_blank">
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
+    </a>
+     <a href="https://science.desi.qld.gov.au/industry/funding/ricf" target="_blank">
+        <img src="{% static 'logos/footer/qld-gov-large.png' %}" />
     </a>
     <a href="https://bioplatforms.com/" target="_blank">
         <img src="{% static 'logos/footer/BIO-RGB_Full-POS.png' %}" />
