Change cite page to acknowledge

--- a/webapp/home/templates/home/acknowledge.html
+++ b/webapp/home/templates/home/acknowledge.html
@@ -12,7 +12,7 @@
 
 <main>
   <div class="container">
-    <h1> Citing Galaxy Australia </h1>
+    <h1> Acknowledging Galaxy Australia </h1>
 
     <p class="lead">
       When you use Galaxy Australia and supported licenced tools (such as FGENESH++ or Cell Ranger) in support of your publication or project, please acknowledge its use with the following acknowledgement statement.
