--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -144,15 +144,10 @@
 
       <div class="col-sm-12">
         <p>
-          The Australian FGENESH++ Service is provided by the Australian
-          Biocommons in collaboration with and underpinned by resources
-          provided by Pawsey Supercomputing Centre and Bioplatforms Australia.
-          When papers acknowledge the Australian FGENESH++ Service, they
-          support continued research infrastructure investments by institutions
-          and governments. Please acknowledge the Australian FGENESH++ Service
-          with the following statement:
+          The Australian FGENESH++ Service is provided by the Australian Biocommons and partners. When papers acknowledge the Australian FGENESH++ Service, they support continued research infrastructure investments by institutions and governments. Please acknowledge the Australian FGENESH++ Service with the following statement:
         </p>
         <blockquote class="blockquote">
+          <!-- To update: -->
           This work was supported by the Australian FGENESH++ Service
           (<a
             href="https://biocommons.org.au/fgenesh-plus-plus"
