Add margin to ending paragraph

--- a/webapp/people/templates/people/index.html
+++ b/webapp/people/templates/people/index.html
@@ -60,9 +60,11 @@
     </div>
   </div>
 
-  <p>
-    Galaxy Australia has had many contributors since its inception. If you know someone that should be mentioned on this page, please let us know.
-  </p>
+  <div class="my-5">
+    <p>
+      Galaxy Australia has had many contributors since its inception. If you know someone that should be mentioned on this page, please let us know.
+    </p>
+  </div>
 </main>
 
 {% endblock %}
