--- a/webapp/people/templates/people/index.html
+++ b/webapp/people/templates/people/index.html
@@ -32,7 +32,7 @@
     <div class="row my-5 align-items-center">
       <div class="col-sm-6 px-5">
         <p>
-          Simon Gladman was one of the founding members of Galaxy Australia, and lead the technical design and development of the service. He unfortunately passed away in late 2022, leaving a gap in the team that may never be fully repaired. Simon was a brilliant engineer, and his passion for Galaxy, board games and D&D will be remembered by many in the global Galaxy community. Galaxy Australia is his legacy, and we are proud to continue his work.
+          {{ simon.bio }}
         </p>
       </div>
       <div class="col-sm-6">
@@ -43,7 +43,7 @@
 
     <hr class="my-5">
 
-    <h2 class="mb-2">Alumni</h2>
+    <h2 class="mb-2">Galaxy Australia Team Alumni</h2>
 
     <p class="mb-5">
       Past members of the Galaxy Australia team who helped bring us to
