Add new fgenesh acknowledgement statement

--- a/webapp/home/templates/home/requests/access/fgenesh.html
+++ b/webapp/home/templates/home/requests/access/fgenesh.html
@@ -147,13 +147,7 @@
           The Australian FGENESH++ Service is provided by the Australian Biocommons and partners. When papers acknowledge the Australian FGENESH++ Service, they support continued research infrastructure investments by institutions and governments. Please acknowledge the Australian FGENESH++ Service with the following statement:
         </p>
         <blockquote class="blockquote">
-          <!-- To update: -->
-          This work was supported by the Australian FGENESH++ Service
-          (<a
-            href="https://biocommons.org.au/fgenesh-plus-plus"
-            target="_blank"
-          >https://biocommons.org.au/fgenesh-plus-plus</a>)
-          provided by the Australian BioCommons and Galaxy Australia.
+          Access to the Australian FGENESH++ Service is through the Galaxy Australia service, both provided by Australian BioCommons and its partners. These services receive NCRIS funding through Bioplatforms Australia, as well as the University of Melbourne and Queensland Government RICF funding.
         </blockquote>
         <div class="form-check">
           {{ form.agree_acknowledge.errors }}
