--- a/webapp/home/templates/home/acknowledge.html
+++ b/webapp/home/templates/home/acknowledge.html
@@ -28,7 +28,7 @@
     <h3>Australian FGENESH++ Service on Galaxy Australia</h3>
     <div class="m-5 mt-3">
       <em>
-        “Access to the Australian FGENESH++ Service through Galaxy Australia Service, both provided by Australian BioCommons and its partners. These services receives NCRIS funding through Bioplatforms Australia, as well as The University of Melbourne and Queensland Government RICF funding."
+        “Access to the Australian FGENESH++ Service is through the Galaxy Australia service, both provided by Australian BioCommons and its partners. These services receive NCRIS funding through Bioplatforms Australia, as well as the University of Melbourne and Queensland Government RICF funding."
       </em>
     </div>
 
