Update QCIF logo

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -27,9 +27,43 @@
 
 <hr>
 
-<h3 id="operational-partners">
-  Galaxy Australia Operational Partners
-</h3>
+<div class="my-10">
+  <h3 id="operational-partners">
+    Galaxy Australia Operational Partners
+  </h3>
+
+  <p>
+  Australian BioCommons (hosted by
+    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>)
+    operates Galaxy Australia in collaboration with
+    <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
+    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
+    and
+    <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.<br>
+    This service forms part of the national Australian BioCommons infrastructure.
+  </p>
+  <div class="container logo">
+      <div class="text-center">
+        <a href="https://www.biocommons.org.au" target="_blank">
+          <img src="{% static 'logos/footer/au-biocommons.png' %}" />
+        </a>
+        <a href="https://www.unimelb.edu.au" target="_blank">
+          <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
+        </a>
+        <a href="https://www.qcif.edu.au" target="_blank">
+          <img src="{% static 'logos/footer/qcif.svg' %}" />
+        </a>
+        <a href="https://www.aarnet.edu.au" target="_blank">
+          <img src="{% static 'logos/footer/aarnet.png' %}" />
+        </a>
+      </div>
+  </div>
+</div>
+
+<div class="my-10">
+  <h3 id="computational-partners">
+    Computational Partners
+  </h3>
 
 <p>
   The Australian BioCommons (hosted by
