Update another qcif logo

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -88,7 +88,7 @@
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
     </a>
     <a href="https://www.qcif.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/qcif-2.png' %}" />
+        <img src="{% static 'logos/footer/qcif.svg' %}" />
     </a>
       <a href="https://nci.org.au" target="_blank">
           <img src="{% static 'logos/footer/NCI_logo.png' %}" />
