--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -36,7 +36,8 @@
     <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>)
     operates Galaxy Australia in collaboration with
     <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
-    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
+    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
+    <a href="https://www.uq.edu.au/" target="_blank">The University of Queensland</a>
     and
     <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.<br>
     This service forms part of the national Australian BioCommons infrastructure.
@@ -51,6 +52,9 @@
         </a>
         <a href="https://www.qcif.edu.au" target="_blank">
           <img src="{% static 'logos/footer/qcif.svg' %}" />
+        </a>
+        <a href="https://www.uq.edu.au" target="_blank">
+          <img src="{% static 'logos/footer/uq.png' %}" />
         </a>
         <a href="https://www.aarnet.edu.au" target="_blank">
           <img src="{% static 'logos/footer/aarnet.png' %}" />
@@ -70,6 +74,7 @@
     <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
     <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
     <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
+    <a href="https://www.uq.edu.au/" target="_blank">the University of Queensland</a>,
     <a href="https://pawsey.org.au/" target="_blank">Pawsey Supercomputing Research Centre</a>,
     <a href="https://nci.org.au/" target="_blank">National Computational Infrastructure</a>,
     and
@@ -77,30 +82,33 @@
   </p>
 
   <div class="container logo">
-   <div class="text-center">
-     <a href="https://www.aarnet.edu.au" target="_blank">
+    <div class="text-center">
+      <a href="https://www.aarnet.edu.au" target="_blank">
         <img src="{% static 'logos/footer/aarnet.png' %}" />
-     </a>
-     <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">
+      </a>
+      <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">
         <img src="{% static 'logos/footer/ARDC_Nectar_Research_Cloud_RGB.png' %}" />
-     </a>
-     <a href="https://www.unimelb.edu.au" target="_blank">
+      </a>
+      <a href="https://www.unimelb.edu.au" target="_blank">
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
-    </a>
-    <a href="https://www.qcif.edu.au" target="_blank">
+      </a>
+      <a href="https://www.qcif.edu.au" target="_blank">
         <img src="{% static 'logos/footer/qcif.svg' %}" />
-    </a>
+      </a>
+      <a href="https://www.uq.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/uq.png' %}" />
+      </a>
       <a href="https://nci.org.au" target="_blank">
-          <img src="{% static 'logos/footer/NCI_logo.png' %}" />
+        <img src="{% static 'logos/footer/NCI_logo.png' %}" />
       </a>
       <a href="https://pawsey.org.au" target="_blank">
-          <img src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
+        <img src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
       </a>
-       <a href="https://azure.microsoft.com/en-au" target="_blank">
-          <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
-        </a>
-      </div>
+      <a href="https://azure.microsoft.com/en-au" target="_blank">
+        <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
+      </a>
     </div>
+  </div>
 </div>
 
 <div class="my-10">
