Add alt props to logo images

--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -81,33 +81,31 @@
     <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>.
   </p>
 
-  <div class="container logo">
-    <div class="text-center">
-      <a href="https://www.aarnet.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/aarnet.png' %}" />
-      </a>
-      <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">
-        <img src="{% static 'logos/footer/ARDC_Nectar_Research_Cloud_RGB.png' %}" />
-      </a>
-      <a href="https://www.unimelb.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
-      </a>
-      <a href="https://www.qcif.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/qcif.svg' %}" />
-      </a>
-      <a href="https://www.uq.edu.au" target="_blank">
-        <img src="{% static 'logos/footer/uq.png' %}" />
-      </a>
-      <a href="https://nci.org.au" target="_blank">
-        <img src="{% static 'logos/footer/NCI_logo.png' %}" />
-      </a>
-      <a href="https://pawsey.org.au" target="_blank">
-        <img src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
-      </a>
-      <a href="https://azure.microsoft.com/en-au" target="_blank">
-        <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
-      </a>
-    </div>
+  <div class="container logo text-center">
+    <a href="https://www.aarnet.edu.au" target="_blank">
+      <img alt="AARNet logo" src="{% static 'logos/footer/aarnet.png' %}" />
+    </a>
+    <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">
+      <img alt="ARDC Nectar Research Cloud logo" src="{% static 'logos/footer/ARDC_Nectar_Research_Cloud_RGB.png' %}" />
+    </a>
+    <a href="https://www.unimelb.edu.au" target="_blank">
+      <img alt="University of Melbourne logo" src="{% static 'logos/footer/unimelb-2.svg' %}" />
+    </a>
+    <a href="https://www.qcif.edu.au" target="_blank">
+      <img alt="QCIF logo" src="{% static 'logos/footer/qcif.svg' %}" />
+    </a>
+    <a href="https://www.uq.edu.au" target="_blank">
+      <img alt="University of Queensland logo" src="{% static 'logos/footer/uq.png' %}" />
+    </a>
+    <a href="https://nci.org.au" target="_blank">
+      <img alt="National Computational Infrastructure logo" src="{% static 'logos/footer/NCI_logo.png' %}" />
+    </a>
+    <a href="https://pawsey.org.au" target="_blank">
+      <img alt="Pawsey Supercomputing Research Centre logo" src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
+    </a>
+    <a href="https://azure.microsoft.com/en-au" target="_blank">
+      <img alt="Microsoft Azure logo" src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
+    </a>
   </div>
 </div>
 
