Update acknowledge links to new page

--- a/webapp/home/templates/home/snippets/about/terms-of-service.html
+++ b/webapp/home/templates/home/snippets/about/terms-of-service.html
@@ -51,7 +51,7 @@
 
       <li>
         You agree to acknowledge use of Galaxy Australia in your research outputs using the format of our
-        <a href="#acknowledgement-statement">Acknowledgement Statement</a>.
+        <a href="/acknowledge">Acknowledgement Statement</a>.
       </li>
     </ol>
   </li>
