--- a/webapp/home/templates/home/snippets/footer.html
+++ b/webapp/home/templates/home/snippets/footer.html
@@ -57,7 +57,7 @@
             <small>
               <a href="/request">Support</a> <br>
               <a href="/about">About</a><br>
-              <a href="/about#acknowledgement-statement">Acknowledging Galaxy Australia</a> <br>
+              <a href="/acknowledge">Acknowledging Galaxy Australia</a> <br>
               <a href="/about#feature-catalogue">Feature catalogue</a>
             </small>
           </div>
