--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -32,8 +32,9 @@
   </h3>
 
   <p>
-  Australian BioCommons (hosted by
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>)
+    <a href="https://www.biocommons.org.au" target="_blank">Australian BioCommons</a>
+    (hosted by
+    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>)
     operates Galaxy Australia in collaboration with
     <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
     <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
@@ -72,9 +73,9 @@
   Galaxy Australia is underpinned by computational resources provided by
     <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>,
     <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
+    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
     <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
-    <a href="https://www.uq.edu.au/" target="_blank">the University of Queensland</a>,
+    <a href="https://www.uq.edu.au/" target="_blank">The University of Queensland</a>,
     <a href="https://pawsey.org.au/" target="_blank">Pawsey Supercomputing Research Centre</a>,
     <a href="https://nci.org.au/" target="_blank">National Computational Infrastructure</a>,
     and
@@ -116,7 +117,7 @@
 
   <p>
   Galaxy Australia is supported by funding from
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
+    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>,
     the <a href="https://science.desi.qld.gov.au/industry/funding/ricf" target="_blank">
       Queensland Government
     </a>,
