--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -35,8 +35,7 @@
   Australian BioCommons (hosted by
     <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>)
     operates Galaxy Australia in collaboration with
-    <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
-    <a href="https://www.unimelb.edu.au/" target="_blank">The University of Melbourne</a>
+    <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>
     and
     <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.<br>
     This service forms part of the national Australian BioCommons infrastructure.
