--- a/webapp/home/templates/home/snippets/about/about.html
+++ b/webapp/home/templates/home/snippets/about/about.html
@@ -1,138 +1,175 @@
 {% load static %}
 
-
-<hr>
+<hr />
 <h3 id="acknowledgement-statement">
   Galaxy Australia Acknowledgment Statement
 </h3>
 
-<p>When you use Galaxy Australia to support your publication or project, please acknowledge its use with the following statement: </p>
+<p>
+  When you use Galaxy Australia to support your publication or project, please
+  acknowledge its use with the following statement:
+</p>
 
-<div style="margin: 2rem 4rem 4rem 4rem;">
+<div style="margin: 2rem 4rem 4rem 4rem">
   <p>
     <em>
-      "This work is supported by Galaxy Australia, a service provided by Australian BioCommons and its partners. The service receives NCRIS funding through Bioplatforms Australia,
-      as well as The University of Melbourne and Queensland Government RICF funding."
+      "This work is supported by Galaxy Australia, a service provided by
+      Australian BioCommons and its partners. The service receives NCRIS funding
+      through Bioplatforms Australia, as well as The University of Melbourne and
+      Queensland Government RICF funding."
     </em>
   </p>
   <b>Please also cite the Galaxy publication:</b>
   <p>
     <small>
-      The Galaxy Community, The Galaxy platform for accessible, reproducible, and collaborative data analyses: 2024 update, <i>Nucleic Acids Research</i>, Volume 52, Issue W1, 5 July 2024, Pages W83-W94,
-      <a href="https://doi.org/10.1093/nar/gkae410" target="_blank">https://doi.org/10.1093/nar/gkae410</a>
+      The Galaxy Community, The Galaxy platform for accessible, reproducible,
+      and collaborative data analyses: 2024 update,
+      <i>Nucleic Acids Research</i>, Volume 52, Issue W1, 5 July 2024, Pages
+      W83-W94,
+      <a href="https://doi.org/10.1093/nar/gkae410" target="_blank"
+        >https://doi.org/10.1093/nar/gkae410</a
+      >
     </small>
   </p>
 </div>
-<hr>
-
+<hr />
 
 <div class="my-10">
-  <h3 id="operational-partners">
-    Operational Partners
-  </h3>
+  <h3 id="operational-partners">Operational Partners</h3>
 
   <p>
-  Australian BioCommons (hosted by
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>)
-    operates Galaxy Australia in collaboration with
-    <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>
+    Australian BioCommons (hosted by
+    <a href="https://www.unimelb.edu.au/" target="_blank"
+      >the University of Melbourne</a
+    >) operates Galaxy Australia in collaboration with
+    <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
+    <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>
     and
-    <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>.<br>
-    This service forms part of the national Australian BioCommons infrastructure.
+    <a href="https://www.uq.edu.au/" target="_blank"
+      >the University of Queensland</a>.
+    <br />
+    This service forms part of the national Australian BioCommons
+    infrastructure.
   </p>
   <div class="container logo">
-      <div class="text-center">
-        <a href="https://www.biocommons.org.au" target="_blank">
-          <img src="{% static 'logos/footer/au-biocommons.png' %}" />
-        </a>
-        <a href="https://www.unimelb.edu.au" target="_blank">
-          <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
-        </a>
-        <a href="https://www.qcif.edu.au" target="_blank">
-          <img src="{% static 'logos/footer/qcif.svg' %}" />
-        </a>
-        <a href="https://www.aarnet.edu.au" target="_blank">
-          <img src="{% static 'logos/footer/aarnet.png' %}" />
-        </a>
-      </div>
+    <div class="text-center">
+      <a href="https://www.unimelb.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
+      </a>
+      <a href="https://www.qcif.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/qcif.svg' %}" />
+      </a>
+      <a href="https://www.aarnet.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/aarnet.png' %}" />
+      </a>
+      <a href="https://www.uq.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/uq.png' %}" />
+      </a>
+      <a href="https://www.biocommons.org.au" target="_blank">
+        <img src="{% static 'logos/footer/au-biocommons.png' %}" />
+      </a>
+    </div>
   </div>
 </div>
 
 <div class="my-10">
-  <h3 id="computational-partners">
-    Computational Partners
-  </h3>
+  <h3 id="computational-partners">Computational Partners</h3>
 
   <p>
-  Galaxy Australia is underpinned by computational resources provided by
+    Galaxy Australia is underpinned by computational resources provided by
     <a href="https://www.aarnet.edu.au/" target="_blank">AARNet</a>,
-    <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">ARDC Nectar Research Cloud</a>,
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
-    <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
-    <a href="https://pawsey.org.au/" target="_blank">Pawsey Supercomputing Research Centre</a>,
-    <a href="https://nci.org.au/" target="_blank">National Computational Infrastructure</a>,
+    <a
+      href="https://ardc.edu.au/services/ardc-nectar-research-cloud/"
+      target="_blank"
+      >ARDC Nectar Research Cloud</a
+    >,
+    <a href="https://www.unimelb.edu.au/" target="_blank"
+      >the University of Melbourne</a
+    >, <a href="https://www.qcif.edu.au/" target="_blank">QCIF</a>,
+    <a href="https://pawsey.org.au/" target="_blank"
+      >Pawsey Supercomputing Research Centre</a
+    >,
+    <a href="https://nci.org.au/" target="_blank"
+      >National Computational Infrastructure</a
+    >,
+    <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>
     and
-    <a href="https://azure.microsoft.com/" target="_blank">Microsoft Azure</a>.
+    <a href="https://www.uq.edu.au/" target="_blank"
+      >the University of Queensland</a>.
   </p>
 
   <div class="container logo">
-   <div class="text-center">
-     <a href="https://www.aarnet.edu.au" target="_blank">
+    <div class="text-center">
+      <a href="https://www.aarnet.edu.au" target="_blank">
         <img src="{% static 'logos/footer/aarnet.png' %}" />
-     </a>
-     <a href="https://ardc.edu.au/services/ardc-nectar-research-cloud/" target="_blank">
-        <img src="{% static 'logos/footer/ARDC_Nectar_Research_Cloud_RGB.png' %}" />
-     </a>
-     <a href="https://www.unimelb.edu.au" target="_blank">
+      </a>
+      <a
+        href="https://ardc.edu.au/services/ardc-nectar-research-cloud/"
+        target="_blank"
+      >
+        <img
+          src="{% static 'logos/footer/ARDC_Nectar_Research_Cloud_RGB.png' %}"
+        />
+      </a>
+      <a href="https://www.unimelb.edu.au" target="_blank">
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
-    </a>
-    <a href="https://www.qcif.edu.au" target="_blank">
+      </a>
+      <a href="https://www.qcif.edu.au" target="_blank">
         <img src="{% static 'logos/footer/qcif.svg' %}" />
-    </a>
+      </a>
       <a href="https://nci.org.au" target="_blank">
-          <img src="{% static 'logos/footer/NCI_logo.png' %}" />
+        <img src="{% static 'logos/footer/NCI_logo.png' %}" />
       </a>
       <a href="https://pawsey.org.au" target="_blank">
-          <img src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
+        <img src="{% static 'logos/footer/pawsey-logo-beige.png' %}" />
       </a>
-       <a href="https://azure.microsoft.com/en-au" target="_blank">
-          <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
-        </a>
-      </div>
+      <a href="https://azure.microsoft.com/en-au" target="_blank">
+        <img src="{% static 'logos/footer/Microsoft_Azure_Logo.svg.png' %}" />
+      </a>
+      <a href="https://www.uq.edu.au" target="_blank">
+        <img src="{% static 'logos/footer/uq.png' %}" />
+      </a>
     </div>
+  </div>
 </div>
 
 <div class="my-10">
-  <h3 id="funding">
-    Funding
-  </h3>
+  <h3 id="funding">Funding</h3>
 
   <p>
-  Galaxy Australia is supported by funding from
-    <a href="https://www.unimelb.edu.au/" target="_blank">the University of Melbourne</a>,
-    the <a href="https://science.desi.qld.gov.au/industry/funding/ricf" target="_blank">
-      Queensland Government
-    </a>,
-    and
-    <a href="https://bioplatforms.com/" target="_blank">Bioplatforms Australia</a>.
-    Bioplatforms are enabled by
+    Galaxy Australia is supported by funding from
+    <a href="https://www.unimelb.edu.au/" target="_blank"
+      >the University of Melbourne</a
+    >, the
+    <a
+      href="https://science.desi.qld.gov.au/industry/funding/ricf"
+      target="_blank"
+    >
+      Queensland Government </a
+    >, and
+    <a href="https://bioplatforms.com/" target="_blank"
+      >Bioplatforms Australia</a
+    >. Bioplatforms are enabled by
     <a href="https://www.education.gov.au/ncris" target="_blank">NCRIS</a>.
   </p>
 
   <div class="container logo">
-   <div class="text-center">
-     <a href="https://www.unimelb.edu.au" target="_blank">
+    <div class="text-center">
+      <a href="https://www.unimelb.edu.au" target="_blank">
         <img src="{% static 'logos/footer/unimelb-2.svg' %}" />
-    </a>
-     <a href="https://science.desi.qld.gov.au/industry/funding/ricf" target="_blank">
+      </a>
+      <a
+        href="https://science.desi.qld.gov.au/industry/funding/ricf"
+        target="_blank"
+      >
         <img src="{% static 'logos/footer/qld-gov-large.png' %}" />
-    </a>
-    <a href="https://bioplatforms.com/" target="_blank">
+      </a>
+      <a href="https://bioplatforms.com/" target="_blank">
         <img src="{% static 'logos/footer/BIO-RGB_Full-POS.png' %}" />
-    </a>
-    <a href="https://www.education.gov.au/ncris" target="_blank">
+      </a>
+      <a href="https://www.education.gov.au/ncris" target="_blank">
         <img src="{% static 'logos/footer/NCRIS-PROVIDER.png' %}" />
-    </a>
-   </div>
+      </a>
+    </div>
   </div>
 </div>
